projects/compiler/test/parser/if_error_no_then_block.out
Error at %FILE_NAME%:1:8
Unexpected token 'else':
  |  if foo else {
            ^