projects/compiler/test/parser/if_error_no_then_block.abra
if foo else {
  3
}
